--- a/package.json
+++ b/package.json
@@ -7,15 +7,22 @@
     "build": "tsc",
     "start": "yarn build && node dist/src/main.js",
     "start:dev": "ts-node-dev --transpile-only src/main.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
-    "test:functional": "jest --projects ./test --forceExit --runInBand",
+    "test:staged": "npm test --findRelatedTests",
+    "test:ci": "npm test --coverage",
+    "test:e2e": "jest --projects ./test --forceExit --runInBand",
     "test:unit": "jest",
     "style:check": "prettier --check 'src/**/*.ts' 'test/**/*.ts'",
-    "style:fix": "prettier --write 'src/**/*.ts' 'test/**/*.ts'"
+    "style:fix": "prettier --write 'src/**/*.ts' 'test/**/*.ts'",
+    "test": "jest"
   },
-  "keywords": [],
+  "keywords": [
+    "node",
+    "nodejs",
+    "typescript",
+    "api"
+  ],
   "author": "Wilson Lucena",
   "license": "ISC",
   "dependencies": {
@@ -25,11 +32,12 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jest": "^29.3.1",
-    "module-alias": "^2.2.2",
-    "ts-jest": "^29.0.3"
+    "module-alias": "^2.2.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
+    "@types/jest": "^29.2.5",
+    "@types/mocha": "^10.0.1",
     "@types/module-alias": "^2.0.1",
     "@types/node": "^18.11.18",
     "@types/supertest": "^2.0.12",
@@ -40,6 +48,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.1.0",
     "supertest": "^6.3.3",
+    "ts-jest": "^29.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   }
