--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
-    "types": ["node"],
+    "types": ["node", "jest"],
     "paths": {
       "@src/*": ["./src/*"],
       "@test/*": ["./test/*"]
