--- a/package.json
+++ b/package.json
@@ -29,17 +29,22 @@
     "@overnightjs/core": "^1.7.6",
     "axios": "^1.2.2",
     "body-parser": "^1.20.1",
+    "config": "^3.3.8",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jest": "^29.3.1",
-    "module-alias": "^2.2.2"
+    "module-alias": "^2.2.2",
+    "pino": "^8.8.0",
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
+    "@types/config": "^3.3.0",
     "@types/express": "^4.17.15",
     "@types/jest": "^29.2.5",
     "@types/mocha": "^10.0.1",
     "@types/module-alias": "^2.0.1",
     "@types/node": "^18.11.18",
+    "@types/pino": "^7.0.5",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
