--- a/package.json
+++ b/package.json
@@ -27,20 +27,26 @@
   "license": "ISC",
   "dependencies": {
     "@overnightjs/core": "^1.7.6",
+    "@prisma/client": "^4.8.1",
     "axios": "^1.2.2",
     "body-parser": "^1.20.1",
     "config": "^3.3.8",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jest": "^29.3.1",
+    "jsonwebtoken": "^9.0.0",
     "module-alias": "^2.2.2",
     "pino": "^8.8.0",
+    "pino-http": "^8.3.1",
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@types/config": "^3.3.0",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/jest": "^29.2.5",
+    "@types/jsonwebtoken": "^9.0.0",
     "@types/mocha": "^10.0.1",
     "@types/module-alias": "^2.0.1",
     "@types/node": "^18.11.18",
@@ -52,6 +58,8 @@
     "git-commit-msg-linter": "^4.5.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.0",
+    "pino-pretty": "^9.1.1",
+    "prisma": "^4.8.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.3",
     "ts-node-dev": "^2.0.0",
