--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test:staged": "npm test --findRelatedTests",
     "test:ci": "npm test --coverage",
     "test:e2e": "jest --projects ./test --forceExit --runInBand",
-    "test:unit": "jest",
+    "test:unit": "jest --watch --runInBand",
     "style:check": "prettier --check 'src/**/*.ts' 'test/**/*.ts'",
     "style:fix": "prettier --write 'src/**/*.ts' 'test/**/*.ts'",
     "test": "jest"
@@ -26,12 +26,13 @@
   "author": "Wilson Lucena",
   "license": "ISC",
   "dependencies": {
-    "@overnightjs/core": "^1.7.6",
     "@prisma/client": "^4.8.1",
     "axios": "^1.2.2",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "config": "^3.3.8",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jest": "^29.3.1",
@@ -39,9 +40,12 @@
     "module-alias": "^2.2.2",
     "pino": "^8.8.0",
     "pino-http": "^8.3.1",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13",
+    "sinon": "^15.0.1"
   },
   "devDependencies": {
+    "@jest-mock/express": "^2.0.1",
+    "@types/bcryptjs": "^2.4.2",
     "@types/config": "^3.3.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
@@ -51,6 +55,7 @@
     "@types/module-alias": "^2.0.1",
     "@types/node": "^18.11.18",
     "@types/pino": "^7.0.5",
+    "@types/sinon": "^10.0.13",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
