--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test:staged": "npm test --findRelatedTests",
     "test:ci": "npm test --coverage",
     "test:e2e": "jest --projects ./test --forceExit --runInBand",
-    "test:unit": "jest --watch --runInBand",
+    "test:unit": "jest --watch",
     "style:check": "prettier --check 'src/**/*.ts' 'test/**/*.ts'",
     "style:fix": "prettier --write 'src/**/*.ts' 'test/**/*.ts'",
     "test": "jest"
@@ -41,7 +41,8 @@
     "pino": "^8.8.0",
     "pino-http": "^8.3.1",
     "reflect-metadata": "^0.1.13",
-    "sinon": "^15.0.1"
+    "sinon": "^15.0.1",
+    "tsyringe": "^4.7.0"
   },
   "devDependencies": {
     "@jest-mock/express": "^2.0.1",
