--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "yarn build && node dist/src/main.js",
-    "start:dev": "ts-node-dev  -r tsconfig-paths/register --inspect --transpile-only src/main.ts",
+    "dev": "nodemon -e ts,js --exec ts-node-dev -r tsconfig-paths/register --inspect --transpile-only ./src/main.ts",
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
     "test:staged": "npm test -c --findRelatedTests",
